tests/ui/macros/rfc-3086-metavar-expr/issue-111904.stderr
error: `count` followed by a comma must have an associated index indicating its depth
  --> $DIR/issue-111904.rs:4:37
   |
LL |     ( $( $($t:ident),* );* ) => { ${count(t,)} }
   |                                     ^^^^^

error: expected expression, found `$`
  --> $DIR/issue-111904.rs:4:35
   |
LL |     ( $( $($t:ident),* );* ) => { ${count(t,)} }
   |                                   ^ expected expression
...
LL |     foo!(a, a; b, b);
   |     ---------------- in this macro invocation
   |
   = note: this error originates in the macro `foo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

